<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="449dp"
        android:layout_height="380dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/Ellipse"

        tools:layout_editor_absoluteX="-20dp"
        tools:layout_editor_absoluteY="-20dp" />

    <View
        android:id="@+id/ellipse_2"
        android:layout_width="184dp"
        android:layout_height="183dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ellipse_2"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="149dp" />

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="636dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="47dp">

        <TextView
            android:id="@+id/instant_cry"
            android:layout_width="240dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="69dp"
            android:layout_marginTop="325dp"
            android:text="@string/trusted_gif"
            android:textAppearance="@style/trusted_gif" />


    </LinearLayout>

    <TextView
        android:id="@+id/use_our_sec"
        android:layout_width="285dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/nothing_is_"
        android:textAppearance="@style/nothing_is_"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="425dp" />

    <View
        android:id="@+id/group"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/group"
        android:elevation="4dp"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="509dp" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="100dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/skip"
        android:textAppearance="@style/skip"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="559dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/safeboxgift"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="191dp" />
</android.support.constraint.ConstraintLayout>