<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@android:dimen/app_icon_size">


    <!-- layout/*.xml -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

    <View
        android:id="@+id/ellipse_2"
        android:layout_width="184dp"
        android:layout_height="183dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ellipse_2"
        app:layout_constraintCircle="@drawable/ellipse_2"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="141dp" />

    <View
        android:id="@+id/safebox"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/safebox"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="184dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/safebox"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="184dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="443dp"
        android:layout_height="421dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/EllipseStore"
        tools:layout_editor_absoluteY="-32dp"
        tools:layout_editor_absoluteX="-10dp" />

    <TextView
        android:id="@+id/store_asset"
        android:layout_width="193dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/store_asset"
        android:textAppearance="@style/store_asset"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="390dp" />

    <TextView
        android:id="@+id/nzinghaa_al"
        android:layout_width="285dp"
        android:layout_height="105dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/nzinghaa_al"
        android:textAppearance="@style/nzinghaa_al"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="428dp" />

    <View
        android:id="@+id/group"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/group"
        android:elevation="4dp"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="524dp" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="100dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/skip"
        android:textAppearance="@style/skip"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="574dp" />

</android.support.constraint.ConstraintLayout>